// Code generated by sqlc. DO NOT EDIT.
// versions:
//   sqlc v1.31.1

package repository

import (
	"database/sql/driver"
	"fmt"

	"github.com/jackc/pgx/v5/pgtype"
)

type MarcadorImpacto string

const (
	MarcadorImpactoAfetaProduo MarcadorImpacto = "Afeta Produção"
)

func (e *MarcadorImpacto) Scan(src interface{}) error {
	switch s := src.(type) {
	case []byte:
		*e = MarcadorImpacto(s)
	case string:
		*e = MarcadorImpacto(s)
	default:
		return fmt.Errorf("unsupported scan type for MarcadorImpacto: %T", src)
	}
	return nil
}

type NullMarcadorImpacto struct {
	MarcadorImpacto MarcadorImpacto
	Valid           bool // Valid is true if MarcadorImpacto is not NULL
}

// Scan implements the Scanner interface.
func (ns *NullMarcadorImpacto) Scan(value interface{}) error {
	if value == nil {
		ns.MarcadorImpacto, ns.Valid = "", false
		return nil
	}
	ns.Valid = true
	return ns.MarcadorImpacto.Scan(value)
}

// Value implements the driver Valuer interface.
func (ns NullMarcadorImpacto) Value() (driver.Value, error) {
	if !ns.Valid {
		return nil, nil
	}
	return string(ns.MarcadorImpacto), nil
}

type NivelCriticidade string

const (
	NivelCriticidadeBaixa NivelCriticidade = "Baixa"
	NivelCriticidadeMdia  NivelCriticidade = "Média"
	NivelCriticidadeAlta  NivelCriticidade = "Alta"
)

func (e *NivelCriticidade) Scan(src interface{}) error {
	switch s := src.(type) {
	case []byte:
		*e = NivelCriticidade(s)
	case string:
		*e = NivelCriticidade(s)
	default:
		return fmt.Errorf("unsupported scan type for NivelCriticidade: %T", src)
	}
	return nil
}

type NullNivelCriticidade struct {
	NivelCriticidade NivelCriticidade
	Valid            bool // Valid is true if NivelCriticidade is not NULL
}

// Scan implements the Scanner interface.
func (ns *NullNivelCriticidade) Scan(value interface{}) error {
	if value == nil {
		ns.NivelCriticidade, ns.Valid = "", false
		return nil
	}
	ns.Valid = true
	return ns.NivelCriticidade.Scan(value)
}

// Value implements the driver Valuer interface.
func (ns NullNivelCriticidade) Value() (driver.Value, error) {
	if !ns.Valid {
		return nil, nil
	}
	return string(ns.NivelCriticidade), nil
}

type NivelUrgencia string

const (
	NivelUrgenciaBaixa NivelUrgencia = "Baixa"
	NivelUrgenciaMdia  NivelUrgencia = "Média"
	NivelUrgenciaAlta  NivelUrgencia = "Alta"
)

func (e *NivelUrgencia) Scan(src interface{}) error {
	switch s := src.(type) {
	case []byte:
		*e = NivelUrgencia(s)
	case string:
		*e = NivelUrgencia(s)
	default:
		return fmt.Errorf("unsupported scan type for NivelUrgencia: %T", src)
	}
	return nil
}

type NullNivelUrgencia struct {
	NivelUrgencia NivelUrgencia
	Valid         bool // Valid is true if NivelUrgencia is not NULL
}

// Scan implements the Scanner interface.
func (ns *NullNivelUrgencia) Scan(value interface{}) error {
	if value == nil {
		ns.NivelUrgencia, ns.Valid = "", false
		return nil
	}
	ns.Valid = true
	return ns.NivelUrgencia.Scan(value)
}

// Value implements the driver Valuer interface.
func (ns NullNivelUrgencia) Value() (driver.Value, error) {
	if !ns.Valid {
		return nil, nil
	}
	return string(ns.NivelUrgencia), nil
}

type OrigemSolicitacao string

const (
	OrigemSolicitacaoSolicitante OrigemSolicitacao = "solicitante"
	OrigemSolicitacaoPreventiva  OrigemSolicitacao = "preventiva"
)

func (e *OrigemSolicitacao) Scan(src interface{}) error {
	switch s := src.(type) {
	case []byte:
		*e = OrigemSolicitacao(s)
	case string:
		*e = OrigemSolicitacao(s)
	default:
		return fmt.Errorf("unsupported scan type for OrigemSolicitacao: %T", src)
	}
	return nil
}

type NullOrigemSolicitacao struct {
	OrigemSolicitacao OrigemSolicitacao
	Valid             bool // Valid is true if OrigemSolicitacao is not NULL
}

// Scan implements the Scanner interface.
func (ns *NullOrigemSolicitacao) Scan(value interface{}) error {
	if value == nil {
		ns.OrigemSolicitacao, ns.Valid = "", false
		return nil
	}
	ns.Valid = true
	return ns.OrigemSolicitacao.Scan(value)
}

// Value implements the driver Valuer interface.
func (ns NullOrigemSolicitacao) Value() (driver.Value, error) {
	if !ns.Valid {
		return nil, nil
	}
	return string(ns.OrigemSolicitacao), nil
}

type PerfilUsuario string

const (
	PerfilUsuarioSolicitante   PerfilUsuario = "solicitante"
	PerfilUsuarioTecnico       PerfilUsuario = "tecnico"
	PerfilUsuarioGestor        PerfilUsuario = "gestor"
	PerfilUsuarioAdministrador PerfilUsuario = "administrador"
)

func (e *PerfilUsuario) Scan(src interface{}) error {
	switch s := src.(type) {
	case []byte:
		*e = PerfilUsuario(s)
	case string:
		*e = PerfilUsuario(s)
	default:
		return fmt.Errorf("unsupported scan type for PerfilUsuario: %T", src)
	}
	return nil
}

type NullPerfilUsuario struct {
	PerfilUsuario PerfilUsuario
	Valid         bool // Valid is true if PerfilUsuario is not NULL
}

// Scan implements the Scanner interface.
func (ns *NullPerfilUsuario) Scan(value interface{}) error {
	if value == nil {
		ns.PerfilUsuario, ns.Valid = "", false
		return nil
	}
	ns.Valid = true
	return ns.PerfilUsuario.Scan(value)
}

// Value implements the driver Valuer interface.
func (ns NullPerfilUsuario) Value() (driver.Value, error) {
	if !ns.Valid {
		return nil, nil
	}
	return string(ns.PerfilUsuario), nil
}

type StatusOs string

const (
	StatusOsAberta      StatusOs = "Aberta"
	StatusOsEmAndamento StatusOs = "Em Andamento"
	StatusOsPausada     StatusOs = "Pausada"
	StatusOsConcluda    StatusOs = "Concluída"
)

func (e *StatusOs) Scan(src interface{}) error {
	switch s := src.(type) {
	case []byte:
		*e = StatusOs(s)
	case string:
		*e = StatusOs(s)
	default:
		return fmt.Errorf("unsupported scan type for StatusOs: %T", src)
	}
	return nil
}

type NullStatusOs struct {
	StatusOs StatusOs
	Valid    bool // Valid is true if StatusOs is not NULL
}

// Scan implements the Scanner interface.
func (ns *NullStatusOs) Scan(value interface{}) error {
	if value == nil {
		ns.StatusOs, ns.Valid = "", false
		return nil
	}
	ns.Valid = true
	return ns.StatusOs.Scan(value)
}

// Value implements the driver Valuer interface.
func (ns NullStatusOs) Value() (driver.Value, error) {
	if !ns.Valid {
		return nil, nil
	}
	return string(ns.StatusOs), nil
}

type StatusSolicitacao string

const (
	StatusSolicitacaoPendente   StatusSolicitacao = "Pendente"
	StatusSolicitacaoConvertida StatusSolicitacao = "Convertida"
	StatusSolicitacaoRejeitada  StatusSolicitacao = "Rejeitada"
)

func (e *StatusSolicitacao) Scan(src interface{}) error {
	switch s := src.(type) {
	case []byte:
		*e = StatusSolicitacao(s)
	case string:
		*e = StatusSolicitacao(s)
	default:
		return fmt.Errorf("unsupported scan type for StatusSolicitacao: %T", src)
	}
	return nil
}

type NullStatusSolicitacao struct {
	StatusSolicitacao StatusSolicitacao
	Valid             bool // Valid is true if StatusSolicitacao is not NULL
}

// Scan implements the Scanner interface.
func (ns *NullStatusSolicitacao) Scan(value interface{}) error {
	if value == nil {
		ns.StatusSolicitacao, ns.Valid = "", false
		return nil
	}
	ns.Valid = true
	return ns.StatusSolicitacao.Scan(value)
}

// Value implements the driver Valuer interface.
func (ns NullStatusSolicitacao) Value() (driver.Value, error) {
	if !ns.Valid {
		return nil, nil
	}
	return string(ns.StatusSolicitacao), nil
}

type TipoAnexo string

const (
	TipoAnexoFoto  TipoAnexo = "foto"
	TipoAnexoVideo TipoAnexo = "video"
)

func (e *TipoAnexo) Scan(src interface{}) error {
	switch s := src.(type) {
	case []byte:
		*e = TipoAnexo(s)
	case string:
		*e = TipoAnexo(s)
	default:
		return fmt.Errorf("unsupported scan type for TipoAnexo: %T", src)
	}
	return nil
}

type NullTipoAnexo struct {
	TipoAnexo TipoAnexo
	Valid     bool // Valid is true if TipoAnexo is not NULL
}

// Scan implements the Scanner interface.
func (ns *NullTipoAnexo) Scan(value interface{}) error {
	if value == nil {
		ns.TipoAnexo, ns.Valid = "", false
		return nil
	}
	ns.Valid = true
	return ns.TipoAnexo.Scan(value)
}

// Value implements the driver Valuer interface.
func (ns NullTipoAnexo) Value() (driver.Value, error) {
	if !ns.Valid {
		return nil, nil
	}
	return string(ns.TipoAnexo), nil
}

type TipoDefeito string

const (
	TipoDefeitoPredial   TipoDefeito = "Predial"
	TipoDefeitoCorretiva TipoDefeito = "Corretiva"
)

func (e *TipoDefeito) Scan(src interface{}) error {
	switch s := src.(type) {
	case []byte:
		*e = TipoDefeito(s)
	case string:
		*e = TipoDefeito(s)
	default:
		return fmt.Errorf("unsupported scan type for TipoDefeito: %T", src)
	}
	return nil
}

type NullTipoDefeito struct {
	TipoDefeito TipoDefeito
	Valid       bool // Valid is true if TipoDefeito is not NULL
}

// Scan implements the Scanner interface.
func (ns *NullTipoDefeito) Scan(value interface{}) error {
	if value == nil {
		ns.TipoDefeito, ns.Valid = "", false
		return nil
	}
	ns.Valid = true
	return ns.TipoDefeito.Scan(value)
}

// Value implements the driver Valuer interface.
func (ns NullTipoDefeito) Value() (driver.Value, error) {
	if !ns.Valid {
		return nil, nil
	}
	return string(ns.TipoDefeito), nil
}

type TipoOs string

const (
	TipoOsMaquinario TipoOs = "maquinario"
	TipoOsTerceiros  TipoOs = "terceiros"
	TipoOsReparo     TipoOs = "reparo"
)

func (e *TipoOs) Scan(src interface{}) error {
	switch s := src.(type) {
	case []byte:
		*e = TipoOs(s)
	case string:
		*e = TipoOs(s)
	default:
		return fmt.Errorf("unsupported scan type for TipoOs: %T", src)
	}
	return nil
}

type NullTipoOs struct {
	TipoOs TipoOs
	Valid  bool // Valid is true if TipoOs is not NULL
}

// Scan implements the Scanner interface.
func (ns *NullTipoOs) Scan(value interface{}) error {
	if value == nil {
		ns.TipoOs, ns.Valid = "", false
		return nil
	}
	ns.Valid = true
	return ns.TipoOs.Scan(value)
}

// Value implements the driver Valuer interface.
func (ns NullTipoOs) Value() (driver.Value, error) {
	if !ns.Valid {
		return nil, nil
	}
	return string(ns.TipoOs), nil
}

type TipoSolicitacao string

const (
	TipoSolicitacaoMaquinario TipoSolicitacao = "maquinario"
	TipoSolicitacaoReparo     TipoSolicitacao = "reparo"
)

func (e *TipoSolicitacao) Scan(src interface{}) error {
	switch s := src.(type) {
	case []byte:
		*e = TipoSolicitacao(s)
	case string:
		*e = TipoSolicitacao(s)
	default:
		return fmt.Errorf("unsupported scan type for TipoSolicitacao: %T", src)
	}
	return nil
}

type NullTipoSolicitacao struct {
	TipoSolicitacao TipoSolicitacao
	Valid           bool // Valid is true if TipoSolicitacao is not NULL
}

// Scan implements the Scanner interface.
func (ns *NullTipoSolicitacao) Scan(value interface{}) error {
	if value == nil {
		ns.TipoSolicitacao, ns.Valid = "", false
		return nil
	}
	ns.Valid = true
	return ns.TipoSolicitacao.Scan(value)
}

// Value implements the driver Valuer interface.
func (ns NullTipoSolicitacao) Value() (driver.Value, error) {
	if !ns.Valid {
		return nil, nil
	}
	return string(ns.TipoSolicitacao), nil
}

type AreaTecnico struct {
	ID       int16
	TenantID int64
	Nome     string
}

type Empresa struct {
	ID         int64
	Subdominio string
	Nome       string
	Ativa      bool
	CriadoEm   pgtype.Timestamptz
}

type EmpresaTerceirizada struct {
	ID            int64
	TenantID      int64
	Nome          string
	Especialidade *string
	Telefone      *string
	Ativa         bool
	CriadoEm      pgtype.Timestamptz
}

type Loja struct {
	ID       int64
	TenantID int64
	Nome     string
	Ativa    bool
	CriadoEm pgtype.Timestamptz
}

type Maquina struct {
	ID               int64
	TenantID         int64
	SetorID          int64
	NumeroPatrimonio string
	NumeroSerie      *string
	Nome             string
	Descricao        *string
	Marca            *string
	Modelo           *string
	FotoChave        *string
	Ativa            bool
	CriadoEm         pgtype.Timestamptz
	Criticidade      NivelCriticidade
}

type OrdemServico struct {
	ID                    int64
	TenantID              int64
	SolicitacaoID         int64
	Tipo                  TipoOs
	TecnicoID             int64
	EmpresaTerceirizadaID *int64
	TerceiroAcionadoEm    pgtype.Timestamptz
	AbertaPorID           *int64
	AfetaProducao         bool
	Status                StatusOs
	AbertaEm              pgtype.Timestamptz
	IniciadaEm            pgtype.Timestamptz
	CriadoEm              pgtype.Timestamptz
	Urgencia              NivelUrgencia
}

type OsCusto struct {
	ID                       int64
	TenantID                 int64
	OrdemServicoID           int64
	Tipo                     TipoOs
	CustoHoraTecnico         pgtype.Float8
	CustoManutencao          pgtype.Float8
	DescricaoServicoTerceiro *string
	LancadoPorID             int64
	LancadoEm                pgtype.Timestamptz
	CustoRevisadoEm          pgtype.Timestamptz
	TemNotaFiscal            bool
}

type OsCustoItem struct {
	ID               int64
	TenantID         int64
	OrdemServicoID   int64
	Tipo             TipoOs
	Descricao        string
	CustoManutencao  pgtype.Float8
	CustoHoraTecnico pgtype.Float8
	CriadoEm         pgtype.Timestamptz
}

type OsEncerramento struct {
	ID                int64
	TenantID          int64
	OrdemServicoID    int64
	Tipo              TipoOs
	TipoDefeito       TipoDefeito
	EncerradoPorID    int64
	DataFim           pgtype.Timestamptz
	DefeitoConstatado string
	CausaRaiz         string
	Solucao           string
	CriadoEm          pgtype.Timestamptz
}

type OsNotaFiscal struct {
	ID             int64
	TenantID       int64
	OrdemServicoID int64
	Numero         string
	Serie          *string
	CriadoEm       pgtype.Timestamptz
}

type OsPausa struct {
	ID             int64
	OrdemServicoID int64
	StatusAnterior StatusOs
	Motivo         string
	PausadaEm      pgtype.Timestamptz
	RetomadaEm     pgtype.Timestamptz
}

type Preventiva struct {
	ID            int64
	TenantID      int64
	MaquinaID     int64
	Descricao     string
	IntervaloDias int32
	ProximaData   pgtype.Date
	Ativa         bool
	CriadoEm      pgtype.Timestamptz
	TecnicoID     *int64
}

type Setor struct {
	ID       int64
	TenantID int64
	LojaID   int64
	Nome     string
	Ativo    bool
	CriadoEm pgtype.Timestamptz
}

type SolicitacaoAnexo struct {
	ID            int64
	SolicitacaoID int64
	Tipo          TipoAnexo
	Chave         string
	MimeType      string
	TamanhoBytes  int64
	CriadoEm      pgtype.Timestamptz
}

type SolicitacaoImpacto struct {
	SolicitacaoID int64
	Marcador      MarcadorImpacto
}

type SolicitacaoO struct {
	ID             int64
	TenantID       int64
	Tipo           TipoSolicitacao
	MaquinaID      *int64
	ItemDescricao  *string
	SetorID        int64
	SolicitanteID  *int64
	PreventivaID   *int64
	Status         StatusSolicitacao
	Origem         OrigemSolicitacao
	Descricao      string
	MotivoRejeicao *string
	RejeitadoPorID *int64
	RejeitadaEm    pgtype.Timestamptz
	CriadoEm       pgtype.Timestamptz
}

type Usuario struct {
	ID                       int64
	TenantID                 int64
	Perfil                   PerfilUsuario
	AreaTecnicoID            *int16
	Nome                     string
	Email                    string
	SenhaHash                string
	Telefone                 *string
	Ativo                    bool
	UltimoAcesso             pgtype.Timestamptz
	CriadoEm                 pgtype.Timestamptz
	TokenRecuperacaoHash     *string
	TokenRecuperacaoExpiraEm pgtype.Timestamptz
}

type UsuarioEscopo struct {
	ID                 int64
	UsuarioID          int64
	LojaID             int64
	AcessoTotalSetores bool
	CriadoEm           pgtype.Timestamptz
}

type UsuarioEscopoSetor struct {
	EscopoID int64
	SetorID  int64
}

type VwOsCustoSemLancamento struct {
	ID                    int64
	TenantID              int64
	SolicitacaoID         int64
	Tipo                  TipoOs
	TecnicoID             int64
	EmpresaTerceirizadaID *int64
	TerceiroAcionadoEm    pgtype.Timestamptz
	AbertaPorID           int64
	AfetaProducao         bool
	Status                StatusOs
	AbertaEm              pgtype.Timestamptz
	IniciadaEm            pgtype.Timestamptz
	CriadoEm              pgtype.Timestamptz
	Urgencia              NivelUrgencia
}

type VwOsFinalizada struct {
	ID                    int64
	TenantID              int64
	SolicitacaoID         int64
	Tipo                  TipoOs
	TecnicoID             int64
	EmpresaTerceirizadaID *int64
	TerceiroAcionadoEm    pgtype.Timestamptz
	AbertaPorID           int64
	AfetaProducao         bool
	Status                StatusOs
	AbertaEm              pgtype.Timestamptz
	IniciadaEm            pgtype.Timestamptz
	CriadoEm              pgtype.Timestamptz
	Urgencia              NivelUrgencia
	CustoTotal            int32
}

type VwOsHora struct {
	OrdemServicoID   int64
	HorasParada      pgtype.Float8
	HorasTrabalhadas pgtype.Float8
}
